fix copyright to match original commit by jrockway (449587b)

--- a/dist.ini
+++ b/dist.ini
@@ -1,7 +1,7 @@
 name        = Context-Preserve
 author      = Jonathan Rockway <jrockway@cpan.org>
 license     = Perl_5
-copyright_holder = Jonathan Rockway
+copyright_holder = Infinity Interactive
 copyright_year = 2008
 
 [@Author::ETHER]
